--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-makepad-widgets = "1.0.0"
+makepad-widgets = { git = "https://github.com/makepad/makepad.git", branch = "dev" }
+makepad-code-editor = { git = "https://github.com/makepad/makepad.git", branch = "dev" }
+makepad-micro-serde = { git = "https://github.com/makepad/makepad.git", branch = "dev" }
+makepad-ai = { git = "https://github.com/makepad/makepad.git", branch = "dev", optional = true }
